# project

./: README.md
server/: CMakeLists.txt  main.cpp  notifier.cpp  notifier.h  storage.cpp  storage.h  utils.cpp  utils.h
web/: app.js  index.html  styles.css
